# beautiful-image

./: .gitignore  Cargo.toml  README.md  index.html
crates/core/: Cargo.toml
crates/core/src/: lib.rs
examples/web-demo/: index.html  package-lock.json  package.json  vite.config.ts
examples/web-demo/src/: main.ts  style.css
src/: lib.rs
